--- a/github.html
+++ b/github.html
@@ -7,6 +7,33 @@
     <title>Creando pagina web con github</title>
 </head>
 <body>
-    
+    <header>
+        <h1>BLOG DE VOLCANES EN EL ECUADOR</h1>
+        <h1> Volcan Cotopaxi</h1>
+    </header>
+    <section>
+        <article>
+            <h1>Mapa de peligros volcánicos potenciales <br>
+
+                Instituto Geofísico - Escuela Politécnica Nacional
+                
+                13 de septiembre de 2022</h1>
+            <p>El Cotopaxi es considerado uno de los volcanes más peligrosos del mundo debido a la frecuencia de sus erupciones,<br>
+                su estilo eruptivo, su relieve, su cobertura glaciar y por la cantidad de poblaciones potencialmente expuestas a sus amenazas.<br>
+                 Desde el inicio de la conquista española, el Cotopaxi ha presentado cinco grandes periodos eruptivos: 1532-1534, 1742-1744, 1766-1768, 1853-1854 y 1877-1880.<br>
+                  Dentro de cierto rango, todos los episodios han dado lugar a fenómenos volcánicos muy peligrosos, y no hay duda de que episodios similares volverán a repetirse en el plazo de las décadas.<br>
+                   Los cuatro últimos periodos han dado lugar a muy importantes pérdidas socio-económicas en el Ecuador.<br>
+                    La peligrosidad del Cotopaxi radica en que sus erupciones pueden dar lugar a la formación de enormes lahares (flujos de lodo y escombros) que transitarían por drenajes vecinos a zonas<br>
+                     densamente pobladas como el Valle Interandino entre Mulaló y Latacunga, y una parte del valle de los Chillos. Se ha estimado que actualmente más de 300.000 personas viven en zonas amenazadas<br>
+                      por lahares en caso de que se repitan erupciones similares a las ocurridas en los siglos XVIII y XIX. Adicionalmente, <br>
+                      la caída de ceniza producida durante una erupción del Cotopaxi podría afectar una parte muy significativa de la Sierra y la Costa del Ecuador. </p>
+            <img src="img/vl.coto.png" width="500"/>
+            <h1>RECOMENDACIONES PARA VISITAR EL COTOPAXI</h1>
+            <p>Vestimenta: Ropa abrigada, poncho de aguas o chompa impermeable en caso de lluvia o garú.<br> 
+                Calzado apropiado, tipo botines de media caña en caso de caminatas medianas o largas. </p>
+        </article>
+
+
+    </section>
 </body>
 </html>
