--- a/github.html
+++ b/github.html
@@ -27,7 +27,7 @@
                      densamente pobladas como el Valle Interandino entre Mulaló y Latacunga, y una parte del valle de los Chillos. Se ha estimado que actualmente más de 300.000 personas viven en zonas amenazadas<br>
                       por lahares en caso de que se repitan erupciones similares a las ocurridas en los siglos XVIII y XIX. Adicionalmente, <br>
                       la caída de ceniza producida durante una erupción del Cotopaxi podría afectar una parte muy significativa de la Sierra y la Costa del Ecuador. </p>
-            <img src="img/vl.coto.png" width="500"/>
+            <img src="img/img.jpg" width="500"/>
             <h1>RECOMENDACIONES PARA VISITAR EL COTOPAXI</h1>
             <p>Vestimenta: Ropa abrigada, poncho de aguas o chompa impermeable en caso de lluvia o garú.<br> 
                 Calzado apropiado, tipo botines de media caña en caso de caminatas medianas o largas. </p>
