--- a/github.html
+++ b/github.html
@@ -13,7 +13,8 @@
     </header>
     <section>
         <article>
-            <h1>Mapa de peligros volcánicos potenciales <br>
+            <h1>FECHA DE SU PRIMERA ERUPCIÓN <br>
+                <h1>26 de junio de 1877</h1>
 
                 Instituto Geofísico - Escuela Politécnica Nacional
                 
@@ -33,7 +34,26 @@
                 Calzado apropiado, tipo botines de media caña en caso de caminatas medianas o largas. </p>
         </article>
 
-
+        <header>
+            <h1> Volcan Sangay</h1>
+        </header>
+        <section>
+            <article>
+                <h1>FECHA DE SU PRIMERA ERUPCIÓN <br>
+                    <h1>4 de agosto de 1929 por Waddell Austin, Robert Moore, Terris Moore, Lewis Thorne</h1>
+    
+                    Observatorio	Instituto Geofísico de la Escuela Politécnica Nacional</h1>
+                <p>El Volcán Sangay ha sido conocido y respetado por las comunidades locales durante siglos debido a su historia de actividad eruptiva,<br> 
+                    y su nombre en lengua kichwa significa "montaña ardiente". En términos de reconocimiento científico,<br>
+                     se cree que el volcán fue estudiado por primera vez por el explorador alemán Alexander von Humboldt en el siglo XIX.<br>
+                      Es un volcán continuamente activo ubicado en la República del Ecuador. Es el volcán más activo del Ecuador,<br>
+                       y es conocido por su expresión explosiva la cual se manifiesta por nubes gruesas de ceniza, que han formado una especie de bóveda desde 1976. </p>
+                <img src="img/img2.jpg" width="500"/>
+                <h1>RECOMENDACIONES PARA VISITAR EL VOLCAN SANGAY</h1>
+                <p>Para ingresar al parque natural las personas deberán usar mascarilla, portar alcohol o alcohol gel,<br>
+                     seguir las disposiciones emitidas por los guardaparques del área protegida y mantener el distanciamiento físico.<br>
+                      Esta impresionante área protegida en su zona alta reabrió sus puertas desde el 25 de agosto. </p>
+            </article>
     </section>
 </body>
 </html>
