--- a/github.html
+++ b/github.html
@@ -54,6 +54,27 @@
                      seguir las disposiciones emitidas por los guardaparques del área protegida y mantener el distanciamiento físico.<br>
                       Esta impresionante área protegida en su zona alta reabrió sus puertas desde el 25 de agosto. </p>
             </article>
+
+            <header>
+                <h1> Volcan Tungurahua</h1>
+            </header>
+            <section>
+                <article>
+                    <h1>FECHA DE SU PRIMERA ERUPCIÓN <br>
+                        <h1>Septiembre de 1999.</h1>
+        
+                        Observatorio	Instituto Geofísico de la Escuela Politécnica Nacional</h1>
+                    <p>En la actualidad, el volcán Tungurahua es el volcán mejor monitoreado del país, pues gracias al esfuerzo de quienes han sido parte del IG EPN a lo largo de los años<br>
+                         Hoy en día contamos con monitoreo de punta y en tiempo real de la actividad interna y superficial del volcán, no solo desde el Instituto Geofísico en Quito,<br>
+                          sino también desde el Observatorio Volcanológico Tungurahua (OVT), ubicado a 15 km del volcán en el valle del Río Patate. Este sistema de monitoreo funciona muy bien,<br>
+                           pues además de instrumentos cuenta con un grupo de vigías del volcán. Este excepcional conjunto está constituido por voluntarios locales, quienes de manera desinteresada y comprometida<br>
+                            han trabajado por una convivencia armónica entre el volcán, sus comunidades y los científicos para que el amor a su tierra y la seguridad de sus comunidades sea la prioridad <br>
+                            durante este largo periodo de actividad eruptiva del volcán Tungurahua que empezó hace 16 años.</p>
+                    <img src="img/img2.jpg" width="500"/>
+                    <h1>LUGARES PROIBHIDOS A INGRESAR </h1>
+                    <p>Se prohíbe a los servidores turísticos, realizar actividades en zonas de alto riesgo. Por ejemplo,<br>
+                         a la Casa del Árbol, en la parroquia Ulba, a las quebradas Bascún y a Juive Grande. </p>
+                </article>
     </section>
 </body>
 </html>
