--- a/github.html
+++ b/github.html
@@ -75,6 +75,25 @@
                     <p>Se prohíbe a los servidores turísticos, realizar actividades en zonas de alto riesgo. Por ejemplo,<br>
                          a la Casa del Árbol, en la parroquia Ulba, a las quebradas Bascún y a Juive Grande. </p>
                 </article>
+
+                <header>
+                    <h1> Volcan Chimborazo</h1>
+                </header>
+                <section>
+                    <article>
+                        <h1>FECHA DE SU PRIMERA ERUPCIÓN <br>
+                            <h1>1880 por Edward Whymper, Louis Carrel y Jean-Antoine Carrel.</h1>
+            
+                            Observatorio	Instituto Geofísico de la Escuela Politécnica Nacional 2001-2002</h1>
+                        <p>El Chimborazo es un estratovolcán potencialmente activo, situaldo en el centro de Ecuador, en la Provincia de Chimborazo.<br>
+                            Perteneciente a la cordillera de los Andes, específicamente a los Andes septentrionales,<br>
+                             cuenta con una altutud de 6263,47 m s. n. m.;1​Nota 1​ por lo que es la montaña más alta del Ecuador y de los Andes septentrionales.</p>
+                        <img src="img/img2.jpg" width="500"/>
+                        <h1>CARACTERISTICAS DEL VOLCAN CHIMBORAZO </h1>
+                        <p>.Volcán Chimborazo Altura: 6.263 msnm o 6.384 km desde el centro de la Tierra.<br>
+                            .Clima del volcán Chimborazo: Temperaturas desde los 0°C a 10°C.<br>
+                             Al estar a los pies del volcán Chimborazo el clima es frío andino y en la cumbre es glacial.  </p>
+                    </article>
     </section>
 </body>
 </html>
