--- a/github.html
+++ b/github.html
@@ -94,6 +94,28 @@
                             .Clima del volcán Chimborazo: Temperaturas desde los 0°C a 10°C.<br>
                              Al estar a los pies del volcán Chimborazo el clima es frío andino y en la cumbre es glacial.  </p>
                     </article>
+
+                    <header>
+                        <h1> Volcan Guagua Pichincha</h1>
+                    </header>
+                    <section>
+                        <article>
+                            <h1>FECHA DE SU PRIMERA ERUPCIÓN <br>
+                                <h1>7 de octubre de 1999 a las 07:06</h1>
+                
+                                Observatorio	Instituto Geofísico de la Escuela Politécnica Nacional 2001-2002</h1>
+
+                            <p>El volcán Guagua Pichincha se encuentra ubicado a 12 km al oeste de la ciudad de Quito,<br>
+                                 en la Cordillera Occidental de los Andes Ecuatorianos. Consiste de un domo, denominado Cristal,<br>
+                                  ubicado dentro de escarpe de deslizamiento que tiene forma de herradura abierta hacia el occidente.<br>
+                                   Otros centros eruptivos más antiguos y mucho más voluminosos como Toaza,<br>
+                                    Guagua Basal y Rucu se encuentran al oriente del centro volcánico activo cuyas fumarolas suelen ser muy notables.</p>
+                            <img src="img/img2.jpg" width="500"/>
+                            <h1>QUIEN DESCUBRIO EL VOLCAN GUAGUA PICHINCHA </h1>
+                            <p>El científico berlinés Alexander von Humboldt ascendió al Pichincha en 1802,<br>
+                                 durante su viaje de investigación por la América del Sur. </p>
+                                 
+                        </article>
     </section>
 </body>
 </html>
